Corrected alignment of GameOver animation at the end to make it look more presentable

--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -61,7 +61,7 @@
 
 .gameOverStyle {
     -fx-font-family: "Let's go Digital";
-    -fx-font-size: 48;
+    -fx-font-size: 38;
     -fx-background-color: red;
 }
 
